# rust-newsletter

./: .env  .gitignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
configuration/: base.yaml  production.yaml
migrations/: 20230713142418_seed_user.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs
