[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!3.4. OUR FIRST INTEGRATION TEST
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
validator = "0.16"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.24"
anyhow = "1.0.40"
base64 = "0.21"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.18"




# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"
once_cell = "1.7.2"
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"
serde_urlencoded = "0.7.1"




